--- a/html-5-tables/attemp-1/master.css
+++ b/html-5-tables/attemp-1/master.css
@@ -26,15 +26,17 @@ h1 {
 }
 
 table, th, td {
-  border: 1px solid black;
+  /*border: 1px solid black;*/
 }
 
 table {
   width: 400px;
+  border-collapse: collapse;
 }
 
 td, th {
   width: 30%;
+  border-bottom: 1px solid black;
 }
 
 .header-container {
