--- a/fundraiser-meter/css/master.css
+++ b/fundraiser-meter/css/master.css
@@ -1,3 +1,95 @@
 body {
-  background-color: pink;
+  padding: 30px 0 0 0;
 }
+
+*:focus {
+  outline: none
+}
+
+.meter-component {
+  width: 300px;
+  height: 500px;
+  margin: 0 auto;
+}
+
+.meter-component__title {
+  margin: 0;
+  text-align: center;
+  border: 1px solid black;
+  font-size: 24px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.diagram {
+  height: 300px;
+  position: relative;
+}
+
+.diagram__outer-circle {
+  width: 100%;
+  height: 100%;
+  border: black dashed 1px;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.diagram__outer-title {
+  margin: 0;
+  text-align: center;
+  border: 1px black solid;
+  position: absolute;
+  left: 128px;
+  top: -10px;
+  background-color: white;
+}
+
+.diagram__inner-circle {
+  width: 100px;
+  height: 100px;
+  border: black solid 1px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 0px;
+  right: 101px;
+  background-color: limegreen;
+}
+
+.diagram__inner-title {
+    margin: 0;
+    position: absolute;
+    bottom: 36px;
+    left: 36px;
+    text-align: center;
+    border: black solid 1px;
+}
+
+.form {
+    height: 40px;
+    text-align: center;
+    padding: 10px 0 0 0;
+}
+
+.form_button {
+    border-radius: 50%;
+    background: white;
+}
+
+.form_button:hover {
+    cursor: pointer;
+}
+
+.form_button-small {
+    width: 30px;
+    height: 30px;
+}
+
+.form_button-medium {
+    height: 50px;
+    width: 50px;
+}
+
+.form_button-big {
+    height: 100px;
+    width: 100px;
+    
