--- a/fundraiser-meter/src/scss/style.scss
+++ b/fundraiser-meter/src/scss/style.scss
@@ -7,6 +7,11 @@ body {
 }
 
 .meter-component {
+    border: 1px black solid;
+    background: grey;
+}
+
+.meter-component {
   width: 300px;
   height: 500px;
   margin: 0 auto;
