--- a/fundraiser-meter/circular-progress-bar/css/master.less
+++ b/fundraiser-meter/circular-progress-bar/css/master.less
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
+
 @circle-background: #d6dadc;
 @circle-color: #97a71d;
 @circle-size: 120px;
@@ -5,6 +7,9 @@
 @inset-size: 90px;
 @inset-color: #fbfbfb;
 @shadow: 6px 6px 10px rgba(0,0,0,0.2);
+@percentage-color: #97a71d;
+@percentage-font-size: 22px;
+@percentage-text-width: 44px;
 
 .radial-progress {
   background-color: @circle-background;
@@ -97,5 +102,75 @@
       border-radius: 50%;
       box-shadow: @shadow inset;
     }
+  }
+}
+
+.radial-progress {
+  .inset .percentage {
+    height: @percentage-font-size;
+
+    transition: width @transition-length;
+    .numbers {
+      margin-top: -@percentage-font-size;
+      transition: width @transition-length;
+    }
+  }
+}
+
+@i: 0;
+@increment: 180deg / 100;
+.loop (@i) when (@i <= 100) {
+  &[data-progress="@{i}"] {
+    .circle {
+      .mask.full, .fill {
+        -webkit-transform: rotate(@increment * @i);
+        -ms-transform: rotate(@increment * @i);
+        transform: rotate(@increment * @i);
+      }
+      .fill.fix {
+        -webkit-transform: rotate(@increment * @i * 2);
+        -ms-transform: rotate(@increment * @i * 2);
+        transform: rotate(@increment * @i * 2);
+      }
+    }
+    .inset .percentage .numbers {
+      width: @i*@percentage-text-width + @percentage-text-width;
+    }
+  }
+  .loop(@i + 1);
+}
+.loop(@i);
+
+.radial-progress {
+  .inset .percentage {
+    width: @percentage-text-width;
+    position: absolute;
+    top: (@inset-size - @percentage-font-size) / 2;
+    left: (@inset-size - @percentage-text-width) / 2;
+    line-height: 1;
+    text-align: left;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: @percentage-color;
+    font-weight: 800;
+    font-size: @percentage-font-size;
+  }
+}
+
+
+
+.radial-progress {
+  .inset .percentage {
+    span {
+      width: @percentage-text-width;
+      display: inline-block;
+      vertical-align: top;
+      text-align: center;
+    }
+  }
+}
+
+.radial-progress {
+  .inset .percentage {
+    overflow: hidden;
   }
 }
