--- a/fundraiser-meter/src/scss/style.scss
+++ b/fundraiser-meter/src/scss/style.scss
@@ -100,3 +100,107 @@ body {
 .form_button:hover {
   cursor: pointer;
 }
+
+
+/////////////////////////////////
+
+$circle-background: #d6dadc;
+$circle-color: #97a71d;
+$circle-size: 120px;
+$transition-length: 1s;
+$inset-size: 90px;
+$inset-color: #fbfbfb;
+$shadow: 6px 6px 10px rgba(0,0,0,0.2);
+$percentage-color: #97a71d;
+$percentage-font-size: 22px;
+$percentage-text-width: 44px;
+
+
+.radial-progress {
+  background-color: $circle-background;
+  width: $circle-size;
+  height: $circle-size;
+  border-radius: 50%;
+  .circle {
+    .mask.full {
+      transition: transform $transition-length;
+    }
+    .mask {
+      width: $circle-size;
+      height: $circle-size;
+      position: absolute;
+      clip: rect(0px, $circle-size, $circle-size, $circle-size/2);
+      .fill {
+        background-color: $circle-color;
+        width: $circle-size;
+        height: $circle-size;
+        border-radius: 50%;
+        transition: transform $transition-length;
+        position: absolute;
+        clip: rect(0px, $circle-size/2, $circle-size, 0px);
+      }
+    }
+    .shadow {
+      width: $circle-size;
+      height: $circle-size;
+      position: absolute;
+      border-radius: 50%;
+      box-shadow: $shadow inset;
+    }
+  }
+  .inset {
+    width: $inset-size;
+    height: $inset-size;
+    position: absolute;
+    margin-left: ($circle-size - $inset-size)/2;
+    margin-top: ($circle-size - $inset-size)/2;
+    background-color: $inset-color;
+    border-radius: 50%;
+    box-shadow: $shadow;
+    .percentage {
+      height: $percentage-font-size;
+      transition: width $transition-length;
+      width: $percentage-text-width;
+      position: absolute;
+      top: ($inset-size - $percentage-font-size) / 2;
+      left: ($inset-size - $percentage-text-width) / 2;
+      line-height: 1;
+      text-align: left;
+      font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: $percentage-color;
+      font-weight: 800;
+      font-size: $percentage-font-size;
+      overflow: hidden;
+      .numbers {
+        margin-top: -$percentage-font-size;
+        transition: width $transition-length;
+        span {
+          width: $percentage-text-width;
+          display: inline-block;
+          vertical-align: top;
+          text-align: center;
+        }
+      }
+    }
+  }
+
+
+}
+
+$i: 0;
+$increment: 180deg / 100;
+@while $i <= 100 {
+  .radial-progress[data-progress="#{$i}"] {
+    .circle {
+      .mask.full, .fill {
+        -webkit-transform: rotate($increment * $i);
+        -ms-transform: rotate($increment * $i);
+        transform: rotate($increment * $i);
+      }
+    }
+    .inset .percentage .numbers {
+      width: $i*$percentage-text-width + $percentage-text-width;
+    }
+  }
+  $i: $i + 1;
+}
