--- a/fundraiser-meter/src/scss/style.scss
+++ b/fundraiser-meter/src/scss/style.scss
@@ -1,206 +1,6 @@
-body {
-  padding: 30px 0 0 0;
-}
+// GENERAL
+@import "variables";
 
-*:focus {
-  outline: none
-}
-
-.meter-component {
-    border: 1px black solid;
-    background: grey;
-}
-
-.meter-component {
-  width: 300px;
-  height: 500px;
-  margin: 0 auto;
-}
-
-.meter-component__title {
-  margin: 0;
-  text-align: center;
-  border: 1px solid black;
-  font-size: 24px;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-}
-
-.diagram {
-  height: 300px;
-  position: relative;
-  box-sizing: border-box;
-}
-
-.diagram__outer-circle {
-  width: 100%;
-  height: 100%;
-  border: black dashed 1px;
-  border-radius: 50%;
-  position: absolute;
-  box-sizing: border-box;
-}
-
-.diagram__outer-title {
-  margin: auto;
-  text-align: center;
-  border: 1px black solid;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: -15px;
-  background-color: white;
-  box-sizing: border-box;
-  height: 30px;
-  width: 60px;
-  line-height: 30px;
-}
-
-.diagram__inner-circle {
-  width: 0px;
-  height: 0px;
-  border: black solid 1px;
-  border-radius: 50%;
-  position: absolute;
-  margin: auto;
-  bottom: -1px;
-  right: 0;
-  left: -1px;
-  background-color: limegreen;
-  box-sizing: border-box;
-  transition: height 1s, width 1s;
-}
-
-.diagram__inner-title {
-  margin: auto;
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  text-align: center;
-  border: black solid 1px;
-  height: 30px;
-  width: 60px;
-  line-height: 30px;
-}
-
-.form {
-  text-align: center;
-  padding: 10px 0 0 0;
-}
-
-.form_button {
-  border-radius: 50%;
-  background: white;
-  width: 50px;
-  height: 50px;
-}
-
-.form_button:hover {
-  cursor: pointer;
-}
-
-
-/////////////////////////////////
-
-$circle-background: #d6dadc;
-$circle-color: #97a71d;
-$circle-size: 120px;
-$transition-length: 1s;
-$inset-size: 90px;
-$inset-color: #fbfbfb;
-$shadow: 6px 6px 10px rgba(0,0,0,0.2);
-$percentage-color: #97a71d;
-$percentage-font-size: 22px;
-$percentage-text-width: 44px;
-
-
-.radial-progress {
-  background-color: $circle-background;
-  width: $circle-size;
-  height: $circle-size;
-  border-radius: 50%;
-  .circle {
-    .mask.full {
-      transition: transform $transition-length;
-    }
-    .mask {
-      width: $circle-size;
-      height: $circle-size;
-      position: absolute;
-      clip: rect(0px, $circle-size, $circle-size, $circle-size/2);
-      .fill {
-        background-color: $circle-color;
-        width: $circle-size;
-        height: $circle-size;
-        border-radius: 50%;
-        transition: transform $transition-length;
-        position: absolute;
-        clip: rect(0px, $circle-size/2, $circle-size, 0px);
-      }
-    }
-    .shadow {
-      width: $circle-size;
-      height: $circle-size;
-      position: absolute;
-      border-radius: 50%;
-      box-shadow: $shadow inset;
-    }
-  }
-  .inset {
-    width: $inset-size;
-    height: $inset-size;
-    position: absolute;
-    margin-left: ($circle-size - $inset-size)/2;
-    margin-top: ($circle-size - $inset-size)/2;
-    background-color: $inset-color;
-    border-radius: 50%;
-    box-shadow: $shadow;
-    .percentage {
-      height: $percentage-font-size;
-      transition: width $transition-length;
-      width: $percentage-text-width;
-      position: absolute;
-      top: ($inset-size - $percentage-font-size) / 2;
-      left: ($inset-size - $percentage-text-width) / 2;
-      line-height: 1;
-      text-align: left;
-      font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-      color: $percentage-color;
-      font-weight: 800;
-      font-size: $percentage-font-size;
-      overflow: hidden;
-      .numbers {
-        margin-top: -$percentage-font-size;
-        transition: width $transition-length;
-        span {
-          width: $percentage-text-width;
-          display: inline-block;
-          vertical-align: top;
-          text-align: center;
-        }
-      }
-    }
-  }
-
-
-}
-
-$i: 0;
-$increment: 180deg / 100;
-@while $i <= 100 {
-  .radial-progress[data-progress="#{$i}"] {
-    .circle {
-      .mask.full, .fill {
-        -webkit-transform: rotate($increment * $i);
-        -ms-transform: rotate($increment * $i);
-        transform: rotate($increment * $i);
-      }
-    }
-    .inset .percentage .numbers {
-      width: $i*$percentage-text-width + $percentage-text-width;
-    }
-  }
-  $i: $i + 1;
-}
+//MODULES
+@import "modules/fundraiser-component";
+@import "modules/radial-progress";
