--- a/fundraiser-meter/src/scss/_variables.scss
+++ b/fundraiser-meter/src/scss/_variables.scss
@@ -1,10 +1,18 @@
+$font: 'Avenir';
+$component-background: #fff;
+$title-container-width: 300px;
+$title-container-height: 80px;
+$title-container__insert-width: 280px;
+$title-container__insert-height: 60px;
 $circle-background: #d6dadc;
 $circle-color: #97a71d;
-$circle-size: 120px;
+$circle-size: 250px;
 $transition-length: 1s;
-$inset-size: 90px;
+$inset-size: 210px;
 $inset-color: #fbfbfb;
 $shadow: 6px 6px 10px rgba(0,0,0,0.2);
 $percentage-color: #97a71d;
 $percentage-font-size: 22px;
-$percentage-text-width: 44px;
+$percentage-text-width: 50px;
+$button-size: 70px;
+$button-insert-size: 50px;
