--- a/fundraiser-meter/src/scss/modules/fundraiser-component.scss
+++ b/fundraiser-meter/src/scss/modules/fundraiser-component.scss
@@ -1,7 +1,17 @@
+html {
+    height: 100vh;
+    background: #d6dadc;
+}
+
 body {
   padding: 30px 0 0 0;
   font-family: $font;
   color: $percentage-color;
+}
+
+.buffer {
+  height: 30px;
+  width: 100%;
 }
 
 *:focus {
@@ -13,18 +23,22 @@ body {
 }
 
 .meter-component {
-  width: 300px;
-  height: 500px;
+  width: 330px;
+  height: 520px;
   margin: 0 auto;
+  padding-top: 15px;
+  border-radius: 15px;
+  box-shadow: $shadow;
 }
 
 .title-container {
   width: $title-container-width;
   height: $title-container-height;
   box-shadow: $shadow inset;
-  padding-top: ($title-container-height - $title-container__insert-height)/2;
   background-color: $circle-background;
-  margin-bottom: 30px;
+  margin: 0px auto 10px;
+  padding-top: ($title-container-height - $title-container__insert-height);
+  border-radius: 20px;
 }
 
 .title-container__insert {
@@ -33,12 +47,15 @@ body {
   box-shadow: $shadow;
   margin-left: ($title-container-width - $title-container__insert-width)/2;
   background-color: $component-background;
+  border-radius: 13px;
 }
 
 .title-container__title {
   line-height: 60px;
   text-align: center;
   margin: 0;
+  text-transform: uppercase;
+  font-size: 23px;
 }
 
 .form {
@@ -70,9 +87,9 @@ body {
   line-height: $button-insert-size;
   margin-left: ($button-size - $button-insert-size)/2;
   box-shadow: $shadow;
-  transition: box-shadow 0.5s;
+  transition: box-shadow 0.2s;
 }
 
-.form_button_insert:hover {
+.form_button_insert:active {
   box-shadow: none;
 }
