--- a/fundraiser-meter/src/scss/_variables.scss
+++ b/fundraiser-meter/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 $font: 'Avenir';
-$component-background: #fff;
+$component-background: #fbfbfb;
 $title-container-width: 300px;
 $title-container-height: 70px;
 $title-container__insert-width: 280px;
@@ -7,7 +7,7 @@ $title-container__insert-height: 60px;
 $circle-background: #d6dadc;
 $circle-color: #97a71d;
 $circle-size: 250px;
-$transition-length: 1s;
+$transition-length: 2s;
 $inset-size: 210px;
 $inset-color: #fbfbfb;
 $shadow: 6px 6px 10px rgba(0,0,0,0.2);
@@ -16,3 +16,5 @@ $percentage-font-size: 22px;
 $percentage-text-width: 60px;
 $button-size: 70px;
 $button-insert-size: 50px;
+$initial-rotation: 20;
+$gap: 36;
