--- a/fundraiser-meter/src/scss/_variables.scss
+++ b/fundraiser-meter/src/scss/_variables.scss
@@ -6,14 +6,17 @@ $title-container__insert-width: 280px;
 $title-container__insert-height: 60px;
 $circle-background: #d6dadc;
 $circle-color: #97a71d;
+$circle-color-low: yellow;
+$circle-color-high: green;
 $circle-size: 250px;
 $transition-length: 1s;
 $inset-size: 210px;
 $inset-color: #fbfbfb;
 $shadow: 6px 6px 10px rgba(0,0,0,0.2);
 $percentage-color: #97a71d;
-$percentage-font-size: 35px;
-$percentage-text-width: 100px;
+$raised-font-size: 12px;
+$percentage-font-size: 50px;
+$percentage-text-width: 120px;
 $button-size: 70px;
 $button-insert-size: 50px;
 $initial-rotation: 20;
