--- a/fundraiser-meter/src/scss/modules/fundraiser-component.scss
+++ b/fundraiser-meter/src/scss/modules/fundraiser-component.scss
@@ -42,6 +42,11 @@ body {
   height: 0;
   width: 61px;
   background: none;
+  p {
+    font-size: 10px;
+    text-align: center;
+    margin: 0;
+  }
 }
 
 .title-container {
