--- a/fundraiser-meter/src/scss/_variables.scss
+++ b/fundraiser-meter/src/scss/_variables.scss
@@ -6,10 +6,11 @@ $title-container__insert-width: 280px;
 $title-container__insert-height: 60px;
 $circle-background: #d6dadc;
 $circle-color: #97a71d;
-$circle-color-low: yellow;
+$circle-color-low: #f16c20;
+$circle-color-medium: #ebc844;
 $circle-color-high: green;
 $circle-size: 250px;
-$transition-length: 1s;
+$transition-length: 2s;
 $inset-size: 210px;
 $inset-color: #fbfbfb;
 $shadow: 6px 6px 10px rgba(0,0,0,0.2);
