--- a/fundraiser-meter/src/scss/modules/fundraiser-component.scss
+++ b/fundraiser-meter/src/scss/modules/fundraiser-component.scss
@@ -36,7 +36,7 @@ body {
   position: absolute;
   margin-top: 218px;
   margin-left: 80px;
-  border-bottom: 32px solid white;
+  border-bottom: 32px solid $component-background;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   height: 0;
