color changes, font color, complettion animation

--- a/fundraiser-meter/src/scss/_variables.scss
+++ b/fundraiser-meter/src/scss/_variables.scss
@@ -1,4 +1,6 @@
+$API: 'http://localhost:7000/';
 $font: 'Avenir';
+$font-color: #767676;
 $component-background: #fbfbfb;
 $component-width: 330;
 $component-height: 520;
@@ -8,14 +10,16 @@ $title-container__insert-width: 280px;
 $title-container__insert-height: 60px;
 $circle-background: #d6dadc;
 $circle-color: #97a71d;
-$circle-color-low: #f16c20;
-$circle-color-medium: #ebc844;
-$circle-color-high: green;
+$circle-color-0: #FF0000;
+$circle-color-25: #FF7B00;
+$circle-color-50: #FFC700;
+$circle-color-75: #45a71d;
 $circle-size: 250px;
 $transition-length: 1.5s;
 $inset-size: 210px;
 $inset-color: #fbfbfb;
 $shadow: 6px 6px 10px rgba(0,0,0,0.2);
+$shadow-complete: 10px 10px 14px rgba(0,0,0,0.4);
 $percentage-color: #97a71d;
 $raised-font-size: 12px;
 $percentage-font-size: 50px;
@@ -24,3 +28,4 @@ $button-size: 70px;
 $button-insert-size: 50px;
 $initial-rotation: 20;
 $gap: 36;
+$complete-animation-duration: 3s;
