--- a/angular.io-tutorial/quickstart/src/app/hero-detail.component.html
+++ b/angular.io-tutorial/quickstart/src/app/hero-detail.component.html
@@ -6,4 +6,5 @@
   </div>
   <div><label>name: </label>{{hero.name}}</div>
   <button (click)="goBack()">Back</button>
+  <button (click)="save()">Save</button>
 </div>
