--- a/angular-tic-tac-toe/my-app/src/app/app.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<div class="landing-page-container">
+  <div class="player-container clearfix">
+    <h1 class="player-x-selector">X</h1>
+    <h1 class="player-o-selector">o</h1>
+  </div>
+  <h2>Tic Tac Toe</h2>
+  <h3 class="play-button"><i class="fa fa-play" aria-hidden="true"></i></h3>
+  <i class="fa fa-long-arrow-up" aria-hidden="true"></i>
+  <p>Click to play</p>
+</div>
