stripped angularJS directives from landing page html and migrated landing page scss and html to BEM naming convention

--- a/angular-tic-tac-toe/my-app/src/app/app.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/app.component.html
@@ -1,10 +1,12 @@
-<div class="landing-page-container">
-  <div class="player-container clearfix">
-    <h1 class="player-x-selector">X</h1>
-    <h1 class="player-o-selector">o</h1>
+<div class="landing-page">
+  <div class="player-markers clearfix">
+    <h1 class="player-markers__marker player-markers__marker--x">X</h1>
+    <h1 class="player-markers__marker player-markers__marker--o">o</h1>
   </div>
-  <h2>Tic Tac Toe</h2>
-  <h3 class="play-button"><i class="fa fa-play" aria-hidden="true"></i></h3>
-  <i class="fa fa-long-arrow-up" aria-hidden="true"></i>
-  <p>Click to play</p>
+  <h2 class="landing-page__title">Tic Tac Toe</h2>
+  <div class="enter">
+    <h3 class="enter__button"><i class="fa fa-play" aria-hidden="true"></i></h3>
+    <i class="fa fa-long-arrow-up enter__arrow" aria-hidden="true"></i>
+    <p class="enter__text">Click to play</p>
+  </div>
 </div>
