--- a/angular-tic-tac-toe/my-app/src/app/game.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game.component.html
@@ -1,1 +1,6 @@
-<h3>Game</h3>
+<div class="game-container">
+  <h1>turn indicator</h1>
+  <turn-indicator></turn-indicator>
+  <board></board>
+  <h1>Mode navigation</h1>
+</div>
