--- a/angular-tic-tac-toe/my-app/src/app/landing-page.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/landing-page.component.html
@@ -5,9 +5,8 @@
   </div>
   <h2 class="landing-page__title">Tic Tac Toe</h2>
   <div class="enter">
-    <h3 class="enter__button"><i class="fa fa-play" aria-hidden="true"></i></h3>
+    <h3 class="enter__button" (click)="gotoGame()"><i class="fa fa-play" aria-hidden="true"></i></h3>
     <i class="fa fa-long-arrow-up enter__arrow" aria-hidden="true"></i>
     <p class="enter__text">Click to play</p>
   </div>
 </div>
-<h3>The Board is here</h3>
