--- a/angular-tic-tac-toe/my-app/src/app/game.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game.component.html
@@ -1,6 +1,5 @@
 <div class="game-container">
-  <h1>turn indicator</h1>
   <turn-indicator></turn-indicator>
   <board></board>
-  <h1>Mode navigation</h1>
+  <mode-navigation></mode-navigation>
 </div>
