migrated mode-navigation class names (HTML and SCSS) to BEM naming convention

--- a/angular-tic-tac-toe/my-app/src/app/mode-navigation.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/mode-navigation.component.html
@@ -1,9 +1,18 @@
-<aside class="game-modes">
+<!-- <aside class="game-modes">
   <div class="game-modes-container">
     <ul class="clearfix">
       <li class="left">2 Player</li>
       <li>Comp</li>
       <li class="right">Comp</li>
+    </ul>
+  </div>
+</aside> -->
+<aside class="mode-navigation">
+  <div class="mode-buttons">
+    <ul class="clearfix">
+      <li class="mode-buttons__button mode-buttons__button--left">2 Player</li>
+      <li class="mode-buttons__button">Comp</li>
+      <li class="mode-buttons__button mode-buttons__button--right">Comp</li>
     </ul>
   </div>
 </aside>
