organised components into a file structure with a barrel ts firl to make imports easier

--- a/angular-tic-tac-toe/my-app/src/app/game/mode-navigation/mode-navigation.component.scss
+++ b/angular-tic-tac-toe/my-app/src/app/game/mode-navigation/mode-navigation.component.scss
@@ -12,7 +12,7 @@ $button-height: 30px;
 
 $font-size: 16px;
 
-mode-navigation {
+.mode-navigation {
     clear: both;
     padding: 20px 0;
     height: $button-height;
