created cellClick and updateCell functions to handle player moves

--- a/angular-tic-tac-toe/my-app/src/app/game/board/board.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game/board/board.component.html
@@ -4,7 +4,7 @@
       <li class="board__cell board__cell--{{cell.index}}"
           *ngFor="let cell of cells"
           (click)="cellClick(cell.index)"
-      >.
+      >{{cell.html}}
       </li>
     </ul>
   </div>
