elevated xIsNext state to the game component. Now being passed via @Input to turn-indicator and board components

--- a/angular-tic-tac-toe/my-app/src/app/game/game.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <div class="game-container">
-  <turn-indicator></turn-indicator>
-  <board></board>
+  <turn-indicator [xIsNext]="xIsNext"></turn-indicator>
+  <board [xIsNext]="xIsNext"></board>
   <mode-navigation></mode-navigation>
 </div>
