--- a/angular-tic-tac-toe/my-app/src/app/game/board/board.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game/board/board.component.html
@@ -3,7 +3,7 @@
     <ul class="board__box clearfix">
       <li class="board__cell board__cell--{{cell.index}}"
           *ngFor="let cell of cells"
-          (click)="cellClick(cell.index)"
+          (click)="cellClick(cell)"
       >{{cell.html}}
       </li>
     </ul>
