--- a/angular-tic-tac-toe/my-app/src/app/game/turn-indicator/turn-indicator.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game/turn-indicator/turn-indicator.component.html
@@ -1,9 +1,15 @@
 <header class="turn-indicator-container">
   <div class="turn-indicator clearfix">
     <ul class="clearfix">
-      <li class="turn-indicator__player turn-indicator__player--x">x</li>
-      <li class="turn-indicator__reset">Reset</li>
-      <li class="turn-indicator__player turn-indicator__player--o">o</li>
+      <li class="turn-indicator__player"
+          [ngClass]="{'turn-indicator__player--x': xIsNext }">
+          x
+      </li>
+      <li class="turn-indicator__reset" (click)="resetCells()">Reset</li>
+      <li class="turn-indicator__player"
+          [ngClass]="{'turn-indicator__player--o': !xIsNext }">
+          o
+      </li>
     </ul>
   </div>
 </header>
