added eventEmitter to board component to communicat change of xIsNext to parent (and then both children automatically) component

--- a/angular-tic-tac-toe/my-app/src/app/game/game.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game/game.component.html
@@ -1,5 +1,9 @@
 <div class="game-container">
+  game component: {{ xIsNext }}
   <turn-indicator [xIsNext]="xIsNext"></turn-indicator>
-  <board [xIsNext]="xIsNext"></board>
+  <board
+    [xIsNext]="xIsNext"
+    (onMove)="onMove($event)">
+  </board>
   <mode-navigation></mode-navigation>
 </div>
