moves cells up to parent game component. created new eventEmitter for reset button to allow cells to be reset and communicated out to the board component

--- a/angular-tic-tac-toe/my-app/src/app/game/game.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game/game.component.html
@@ -1,8 +1,12 @@
 <div class="game-container">
-  game component: {{ xIsNext }}
-  <turn-indicator [xIsNext]="xIsNext"></turn-indicator>
-  <board
+  <turn-indicator
     [xIsNext]="xIsNext"
+    (onReset)="onReset()">
+  </turn-indicator>
+  <board
+    [cells]="cells"
+    [xIsNext]="xIsNext"
+    [movesMade]="movesMade"
     (onMove)="onMove($event)">
   </board>
   <mode-navigation></mode-navigation>
