--- a/angular-tic-tac-toe/my-app/src/app/game/turn-indicator/turn-indicator.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game/turn-indicator/turn-indicator.component.html
@@ -5,7 +5,10 @@
           [ngClass]="{'turn-indicator__player--x': xIsNext }">
           x
       </li>
-      <li class="turn-indicator__reset" (click)="resetCells()">Reset</li>
+      <li class="turn-indicator__reset"
+          (click)="resetCells()">
+          Reset
+      </li>
       <li class="turn-indicator__player"
           [ngClass]="{'turn-indicator__player--o': !xIsNext }">
           o
