added winning logic

--- a/angular-tic-tac-toe/my-app/src/app/game/game.component.html
+++ b/angular-tic-tac-toe/my-app/src/app/game/game.component.html
@@ -7,7 +7,9 @@
     [cells]="cells"
     [xIsNext]="xIsNext"
     [movesMade]="movesMade"
-    (onMove)="onMove($event)">
+    [winner]="winner"
+    (onMove)="onMove($event)"
+    (onWin)="onWin($event)">
   </board>
   <mode-navigation></mode-navigation>
 </div>
